--- a/views/admin/categories/index.ejs
+++ b/views/admin/categories/index.ejs
@@ -1,18 +1,39 @@
 <div class="row mt-3">
     <div class="col-md-12">
-        <div class="card">
-            <div class="card-body">
-                <% categories.forEach(category => { %>
-                    <div class="row mt-2">
-                        <div class="col-md-12">
-                            <div class="card">
-                                <div class="card-body">
-                                    <%= category.title %>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                <% }); %>
+        <div class="row">
+            <div class="col-md-10">
+                <h4 class="h4">Categorias</h4>
+            </div>
+            <div class="col-md-2">
+                <a href="/admin/categories/create" class="btn btn-success float-right">+ Nova categoria</a>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table table-bordered my-table">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Título</th>
+                            <th>Slug</th>
+                            <th>Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% categories.forEach(category => { %>
+                            <tr>
+                                <td><%= category.id %></td>
+                                <td><%= category.title %></td>
+                                <td><%= category.slug %></td>
+                                <td class="w-150px">
+                                    <button class="btn btn-sm btn-primary">Editar</button>
+                                    <button class="btn btn-sm btn-danger">Deletar</button>
+                                </td>
+                            </tr>
+                        <% }); %>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
